Initial round of content and css for the homepage.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,67 @@
----
-layout: default
-title: Get Barkeep
----
+<head>
+  <script src="https://github.com/ooyala/livecss/raw/master/livecss.js"></script>
+  <link rel="stylesheet" href="css/screen.css" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+</head>
 
-<div id="teaser">Who is the Barkeep?</div>
+<div id="header">
+  <div id="videoBox">
+    <h1><span id="barkeepText">barkeep</span> does code reviews</h1>
+    <div id="video">
+    </div>
+  </div>
+
+  <div id="introLinks">
+    <img src="/images/barkeep_logo.png">
+    <ol>
+      <li class="brownText">Watch this video</li>
+      <li>Play with a <a href="#">live Barkeep demo</a></li>
+      <li>Checkout the source on <a href="http://github.com/ooyala/barkeep">Github</a></li>
+    </ol>
+  </div>
+</div>
+
+<div id="frontPage">
+  <h2>Who is the Barkeep?</h2>
+  <p>
+  The Barkeep is a fast, fun way to review code. Engineering organizations can use it to <strong>keep the quality bar high</strong>. With it you can watch commits made to any Git repository, see diffs, write comments, and have those comments emailed to your fellow committers. Read how to install it on Github.
+  </p>
+
+  <h2>How he does it</h2>
+  <table id="featureTable">
+    <tr>
+      <td>
+        <h3>Syntax-highlighted colored diffs</h3>
+        <p>They're easy on the eyes</p>
+      </td>
+      <td>
+        <h3>Side-by-side or unified diff views</h3>
+        <p>Different strokes for different folks.</p>
+      </td>
+      <td>
+        <h3>Threadable comment emails</h3>
+        <p>Discussion is better through email. Subscribe to just comments, commits, or both.</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <h3>Excellent keyboard shortcuts</h3>
+        <p>No mouse required or your money back.</p>
+      </td>
+      <td>
+        <h3>A good UI</h3>
+        <p>If you use it every day it might as well be pleasant.</p>
+      </td>
+
+    </tr>
+  </table>
+
+  <h2>Get started</h2>
+  <p>
+    See the <a href="http://github.com/ooyala/barkeep/blob/master/README.markdown">README on Github</a> for instructions on setting up a Barkeep server.
+  </p>
+
+</div>
+
+
+<footer>Open sourced by <a href="http://www.ooyala.com/about">Ooyala Engineering</a>.</footer>
