Show a brown arrow pointing to the video

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="introLinks">
     <img src="/images/barkeep_logo.png">
     <ol>
-      <li class="brownText">Watch this video</li>
+      <li id="watchThisVideo" class="brownText">Watch this video</li>
       <li>Play with a <a href="#">live Barkeep demo</a></li>
       <li>Checkout the source on <a href="http://github.com/ooyala/barkeep">Github</a></li>
     </ol>
