Remove some text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="frontPage">
   <h2>Who is the Barkeep?</h2>
   <p>
-  The Barkeep is a fast, fun way to review code. Engineering organizations can use it to <strong>keep the quality bar high</strong>. With it you can watch commits made to any Git repository, see diffs, write comments, and have those comments emailed to your fellow committers. Read how to install it on Github.
+  The Barkeep is a fast, fun way to review code. Engineering organizations can use it to <strong>keep the quality bar high</strong>. With it you can watch commits made to any Git repository, see diffs, write comments, and have those comments emailed to your fellow committers.
   </p>
 
   <h2>How he does it</h2>
