--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <tr>
       <td>
         <h3>Syntax-highlighted colored diffs</h3>
-        <p>They're easy on the eyes</p>
+        <p>They're easy on the eyes.</p>
       </td>
       <td>
         <h3>Side-by-side or unified diff views</h3>
