Add in our latest video.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div id="videoBox">
     <h1><span id="barkeepText">barkeep</span> does code reviews</h1>
     <div id="video">
+      <script src="http://player.ooyala.com/player.js?width=560&height=314&embedCode=hwdDh5NDqPHBI0ds3uiPV8QYFbg3VT2N"></script>
     </div>
   </div>
 
