Make the link to the demo page work.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="/images/barkeep_logo.png">
     <ol>
       <li id="watchThisVideo">Watch this video</li>
-      <li>Play with a <a href="#">live Barkeep demo</a></li>
+      <li>Play with a <a href="http://demo.getbarkeep.org">live Barkeep demo</a></li>
       <li>Checkout the source on <a href="http://github.com/ooyala/barkeep">Github</a></li>
     </ol>
   </div>
