--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <script src="https://github.com/ooyala/livecss/raw/master/livecss.js"></script>
   <link rel="stylesheet" href="css/screen.css" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+  <title>Barkeep - the friendly code review system</title>
 </head>
 
 <div id="header">
