Add some more copy to the feature table

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       </td>
       <td>
         <h3>Threadable comment emails</h3>
-        <p>Discussion is better through email. Subscribe to just comments, commits, or both.</p>
+        <p>Subscribe to just comments, commits, or both. The emails are clean and plaintext friendly.</p>
       </td>
     </tr>
     <tr>
       <td>
         <h3>Excellent keyboard shortcuts</h3>
-        <p>No mouse required or your money back.</p>
+        <p>No mouse required or your money back. Just type "<strong>?</strong>" on any page to see
+           a list of shortcuts for that page.</p>
       </td>
       <td>
         <h3>A good UI</h3>
