Update the ooyala eng link to go to ooyala.com

--- a/index.html
+++ b/index.html
@@ -67,4 +67,4 @@
 </div>
 
 
-<footer>Open sourced by <a href="http://www.ooyala.com/about">Ooyala Engineering</a>.</footer>
+<footer>Open sourced by <a href="http://www.ooyala.com">Ooyala Engineering</a>.</footer>
