Rewrite the bullet point copy to be less generic and more about barkeep's differentiators.

--- a/index.html
+++ b/index.html
@@ -34,28 +34,38 @@
     <tr>
       <td>
         <h3>Syntax-highlighted colored diffs</h3>
-        <p>They're easy on the eyes.</p>
+        <p>Staring at code at 2am is rough. These diffs are easy on the eyes.</p>
       </td>
       <td>
-        <h3>Side-by-side or unified diff views</h3>
-        <p>Different strokes for different folks.</p>
+        <h3>Handsome good looks</h3>
+        <p>Barkeep is lite and stays out of your face. It even comes with easter eggs to cheer you up
+           &mdash; just type "<strong>i</strong>" when you're feeling uninspired.
+        </p>
       </td>
       <td>
         <h3>Threadable comment emails</h3>
-        <p>Subscribe to just comments, commits, or both. The emails are clean and plaintext friendly.</p>
+        <p>Subscribe to just comments, commits, or both. Barkeep only sends clean, plaintext emails.</p>
       </td>
     </tr>
     <tr>
       <td>
-        <h3>Excellent keyboard shortcuts</h3>
+        <h3>Chock-full of hotkeys</h3>
         <p>No mouse required or your money back. Just type "<strong>?</strong>" on any page to see
-           a list of shortcuts for that page.</p>
+           a list of keyboard shortcuts for that page.</p>
       </td>
       <td>
-        <h3>A good UI</h3>
-        <p>If you use it every day it might as well be pleasant.</p>
+        <h3>Pure code review</h3>
+        <p>Barkeep is unopinionated. Use it with pre-commit or post-commit
+           workflows, and script tools on top of it if you like. Comes with a command line client and REST
+           APIs.</p>
       </td>
-
+      <td>
+        <h3>Hackable</h3>
+        <p>Everyone uses their code review system differently, so sometimes you want to hack something new in.
+           Barkeep is a small codebase written in Ruby. It's easy to add features and APIs. Send a pull
+           request on Github!
+        </p>
+      </td>
     </tr>
   </table>
 
