Make the barkeep say howdy!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div id="introLinks">
-    <img src="/images/barkeep_logo.png">
+    <div id="logo"></div>
     <ol>
       <li id="watchThisVideo">Watch this video</li>
       <li>Play with a <a href="http://demo.getbarkeep.org">live Barkeep demo</a></li>
