Add more copy and link to a comparison writeup

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ol>
       <li id="watchThisVideo">Watch this video</li>
       <li>Play with a <a href="http://demo.getbarkeep.org">live Barkeep demo</a></li>
-      <li>Checkout the source on <a href="http://github.com/ooyala/barkeep">Github</a></li>
+      <li><a href="#gettingStarted">Use Barkeep</a> with your project</li>
     </ol>
   </div>
 </div>
@@ -26,7 +26,7 @@
 <div id="frontPage">
   <h2>Who is the Barkeep?</h2>
   <p>
-  The Barkeep is a fast, fun way to review code. Engineering organizations can use it to <strong>keep the quality bar high</strong>. With it you can watch commits made to any Git repository, see diffs, write comments, and have those comments emailed to your fellow committers.
+  Barkeep is "the friendly code review system" &mdash; a fast, fun way to review code. Engineering organizations can use it to <strong>keep the quality bar high</strong>. With it you can watch commits made to any Git repository, see diffs, write comments, and have those comments emailed to your fellow committers.
   </p>
 
   <h2>How he does it</h2>
@@ -69,11 +69,20 @@
     </tr>
   </table>
 
-  <h2>Get started</h2>
+  <h2 id="gettingStarted">Get started</h2>
   <p>
-    See the <a href="http://github.com/ooyala/barkeep/blob/master/README.markdown">README on Github</a> for instructions on setting up a Barkeep server.
+    Barkeep is standalone software that you host. Once it's setup, you can use it to track and code review
+    any number of git repos available on the internet. It's designed to be easy to run on Mac or Ubuntu.
+  </p>
+  <p>
+    Check out the <a href="http://github.com/ooyala/barkeep/blob/master/README.markdown">README on Github</a>
+    for instructions on setting up a Barkeep server.
   </p>
 
+  <p>
+    For a comparison of Barkeep to other code review systems,
+    <a href="https://github.com/ooyala/barkeep/wiki/Comparing-Barkeep-to-other-code-review-tools">see the wiki.</a>
+  </p>
 </div>
 
 
