--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+<a id="githubRibbon" href="https://github.com/ooyala/barkeep">
+  <img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub">
+</a>
 <div id="header">
   <div id="videoBox">
     <h1><span id="barkeepText">barkeep</span> does code reviews</h1>
