remove merge conflict text.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      var s = document.getElementsByTagNare('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   </script>
   <script type="text/javascript">
@@ -116,8 +116,5 @@
 
 
 <footer>Open sourced by <a href="http://www.ooyala.com">Ooyala Engineering</a>.</footer>
-<<<<<<< HEAD
 </body>
 </html>
-=======
->>>>>>> Hide arrow on iOS because the position is off.
