lite->lightweight courtesy of caleb

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </td>
       <td>
         <h3>Handsome good looks</h3>
-        <p>Barkeep is lite and stays out of your face. It even comes with easter eggs to cheer you up
+        <p>Barkeep is lightweight and stays out of your face. It even comes with easter eggs to cheer you up
            &mdash; just type "<strong>i</strong>" when you're feeling uninspired.
         </p>
       </td>
